--- a/static/css/pauls.css
+++ b/static/css/pauls.css
@@ -73,7 +73,8 @@ text-shadow: #999 0px 0px 1px;
 .weibo-text a { text-decoration: none; color: #000; }
 .weibo-ref { display: none; }
 .weibo-user a { text-decoration: none; font-weight: bold; color: #000; }
-
+.imageoverflow {  position: absolute; top: 0; left: 0;  }
+.imageoverflow img { width: 100%; height: 100%; position: relative; }
 
 
 
