--- a/static/css/pauls.css
+++ b/static/css/pauls.css
@@ -75,6 +75,6 @@ text-shadow: #999 0px 0px 1px;
 .weibo-user a { text-decoration: none; font-weight: bold; color: #000; }
 .imageoverflow {  position: absolute; top: 0; left: 0;  }
 .imageoverflow img { width: 100%; height: 100%; position: relative; }
-
+.imageoverflow span { font-size: 2em; line-height: 1.6em; position: absolute; top: 0; right: 0; background: rgba(255,255,255,0.5); border-radius: 10px; padding: 30px; width: 50%; margin: 20px;  }
 
 
